--- a/dashboard.html
+++ b/dashboard.html
@@ -4,92 +4,78 @@
 	    <title>Crimean War</title>
 	    <script type="text/javascript" src="js/d3/d3.min.js"></script>
 	    <style type="text/css">
-
-		svg {
-		  width: 960px;
-		  height: 500px;
-		  border: solid 1px #ccc;
-		  font: 10px sans-serif;
-		  shape-rendering: crispEdges;
-		}
-
+			.bar {
+			  fill: steelblue;
+			}
+			.axis text {
+			  font: 10px sans-serif;
+			}
+			.axis path,
+			.axis line {
+			  fill: none;
+			  stroke: #000;
+			  shape-rendering: crispEdges;
+			}
+			.x.axis path {
+			  display: none;
+			}
 	    </style>
 	</head>
   	<body>
+
+  	<svg class="chart"></svg>
     <script type="text/javascript">
+    var data = [{name: "Locke", 	value: 4},
+    			{name: "Reyes", 	value: 8},
+    			{name: "Ford", 		value: 15}, 
+    			{name: "Jarrah", 	value: 16},
+    			{name: "Shephard", 	value: 23},
+    			{name: "Kwon", 		value: 42}]
 
-	var w = 960,
-	    h = 500,
-	    p = [20, 50, 30, 20],
-	    x = d3.scale.ordinal().rangeRoundBands([0, w - p[1] - p[3]]),
-	    y = d3.scale.linear().range([0, h - p[0] - p[2]]),
-	    z = d3.scale.ordinal().range(["lightpink", "darkgray", "lightblue"]),
-	    parse = d3.time.format("%m/%Y").parse,
-	    format = d3.time.format("%b");
+	var margin = {top: 20, right: 30, bottom: 30, left: 40},
+	    width = 960 - margin.left - margin.right,
+	    height = 500 - margin.top - margin.bottom;
 
-	var svg = d3.select("body").append("svg:svg")
-	    .attr("width", w)
-	    .attr("height", h)
-	  	.append("svg:g")
-	    .attr("transform", "translate(" + p[3] + "," + (h - p[2]) + ")");
+	var x = d3.scale.ordinal()
+	    .rangeRoundBands([0, width], .1)
+	    .domain(data.map(function(d) {return d.name; }));
 
-	d3.csv("crimea.csv", function(crimea) {
+	var y = d3.scale.linear()
+	    .range([height, 0])
+	    .domain([0, d3.max(data, function(d) {return d.value; })]);
 
-	  // Transpose the data into layers by cause.
-	  var causes = d3.layout.stack()(["wounds", "other", "disease"].map(function(cause) {
-	    return crimea.map(function(d) {
-	      return {x: parse(d.date), y: +d[cause]};
-	    });
-	  }));
+	var chart = d3.select(".chart")
+	    .attr("width", width + margin.left + margin.right)
+	    .attr("height", height + margin.top + margin.bottom)
+	  .append("g")
+	    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-	  // Compute the x-domain (by date) and y-domain (by top).
-	  x.domain(causes[0].map(function(d) { return d.x; }));
-	  y.domain([0, d3.max(causes[causes.length - 1], function(d) { return d.y0 + d.y; })]);
 
-	  // Add a group for each cause.
-	  var cause = svg.selectAll("g.cause")
-	      .data(causes)
-	    .enter().append("svg:g")
-	      .attr("class", "cause")
-	      .style("fill", function(d, i) { return z(i); })
-	      .style("stroke", function(d, i) { return d3.rgb(z(i)).darker(); });
+	var xAxis = d3.svg.axis()
+	    .scale(x)
+	    .orient("bottom");
 
-	  // Add a rect for each date.
-	  var rect = cause.selectAll("rect")
-	      .data(Object)
-	    .enter().append("svg:rect")
-	      .attr("x", function(d) { return x(d.x); })
-	      .attr("y", function(d) { return -y(d.y0) - y(d.y); })
-	      .attr("height", function(d) { return y(d.y); })
-	      .attr("width", x.rangeBand());
+	var yAxis = d3.svg.axis()
+	    .scale(y)
+	    .orient("left");
 
-	  // Add a label per date.
-	  var label = svg.selectAll("text")
-	      .data(x.domain())
-	    .enter().append("svg:text")
-	      .attr("x", function(d) { return x(d) + x.rangeBand() / 2; })
-	      .attr("y", 6)
-	      .attr("text-anchor", "middle")
-	      .attr("dy", ".71em")
-	      .text(format);
+	  chart.append("g")
+	      .attr("class", "x axis")
+	      .attr("transform", "translate(0," + height + ")")
+	      .call(xAxis);
 
-	  // Add y-axis rules.
-	  var rule = svg.selectAll("g.rule")
-	      .data(y.ticks(5))
-	    .enter().append("svg:g")
-	      .attr("class", "rule")
-	      .attr("transform", function(d) { return "translate(0," + -y(d) + ")"; });
+	  chart.append("g")
+	      .attr("class", "y axis")
+	      .call(yAxis);
 
-	  rule.append("svg:line")
-	      .attr("x2", w - p[1] - p[3])
-	      .style("stroke", function(d) { return d ? "#fff" : "#000"; })
-	      .style("stroke-opacity", function(d) { return d ? .7 : null; });
-
-	  rule.append("svg:text")
-	      .attr("x", w - p[1] - p[3] + 6)
-	      .attr("dy", ".35em")
-	      .text(d3.format(",d"));
-	});
+	chart.selectAll(".bar")
+		.data(data)
+		.enter().append("rect")
+		.attr("class", "bar")
+		.attr("x", function(d) { return x(d.name); })
+		.attr("y", function(d) { return y(d.value); })
+		.attr("height", function(d) { return height - y(d.value); })
+		.attr("width", x.rangeBand());
 
     </script>
   </body>
